<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootContainerRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".activity.login_pages.Register">

    <RelativeLayout
        android:id="@+id/toolbarRegister"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:onClick="backRegisterImageBtn"
            android:padding="12dp"
            android:src="@drawable/img_toolbar_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRegister">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp">

                    <EditText
                        android:id="@+id/etNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:drawableLeft="@drawable/ic_username"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_username"
                        android:hint="@string/name"
                        android:inputType="textPersonName|textAutoComplete"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etEmailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_username"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_username"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pwdContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etPwdRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_username"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_username"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confPwdContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etCnfPwdRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_username"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_username"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etPhoneRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_username"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_username"
                        android:hint="@string/phone_no"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/etBirthdayRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_username"
                    android:focusable="false"
                    android:hint="@string/birthday"
                    android:onClick="BirthdayRegister" />

                <Spinner
                    android:id="@+id/spinnerSexRegister"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:id="@+id/etSexRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_username"
                    android:focusable="false"
                    android:hint="@string/sex"
                    android:onClick="GenderRegister" />

                <Spinner
                    android:id="@+id/spinnerCategoriesRegister"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal" />

                <com.citemenu.mystash.activity.login_pages.MultiSpinner
                    android:id="@+id/multi_spinnerCat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

                <EditText
                    android:id="@+id/etCategoriesRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_username"
                    android:focusable="false"
                    android:hint="@string/categories"
                    android:onClick="CategoriesRegister"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/spinnerAreaOfInterestRegister"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal" />

                <com.citemenu.mystash.activity.login_pages.MultiSpinner
                    android:id="@+id/multi_spinnerInterest"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

                <EditText
                    android:id="@+id/etAreaOfInterestRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_username"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_username"
                    android:focusable="false"
                    android:hint="@string/area_of_interest"
                    android:onClick="AreaOfInterestRegister"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btnId_Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="11dp"
                    android:background="@color/colorLoginBtn"
                    android:onClick="btnRegister"
                    android:text="@string/registration"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnId_updatePwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:background="@color/colorLoginBtn"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnId_updateRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="11dp"
                    android:background="@color/colorLoginBtn"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>

            <!--<ImageView-->
            <!--android:id="@+id/imageProfileRegister"-->
            <!--android:layout_width="130dp"-->
            <!--android:layout_height="130dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:contentDescription="User Profile Image"-->
            <!--android:src="@drawable/img_profile" />-->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageProfileRegister"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/profile_image" />

                <ImageView
                    android:id="@+id/imageProfileRegisterThumb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/camera_thumb_black" />
            </FrameLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>
