<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.mystash_box.RateAndReview">

    <RelativeLayout
        android:id="@+id/relativeLayout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imageViewToolbarBack"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/img_toolbar_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rate_review"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout_toolbar"
        android:background="@drawable/bg_gray">

        <TextView
            android:id="@+id/reviewRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="-"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourRatingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviewRatingTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/your_rating"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/ratingBar_Customer_Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yourRatingText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:progressDrawable="@drawable/ratingbar_c" />

        <EditText
            android:id="@+id/etComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar_Customer_Rating"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/white"
            android:gravity="left|top"
            android:hint="@string/write_your_comments_here"
            android:maxLines="12"
            android:minLines="7"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/reviewSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etComments"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</RelativeLayout>
